added flask session for user input
- delete unneeded contact.html file
- new gitignore rules
- flask_session currently works for processed information recorded in tables, inputted files, and typed input
- added way to display currently upload file in index.html (DOES NOT WORK)
- minor aesthetic changes to <label> tags in index.html

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 #Ignore env folder
 \.venv
+
+#Ignore config file
+\config.py
+
+# Byte-compiled / optimized / DLL files
+**/__pycache__/
+
+#Ignore Flask_Session files
+\flask_session
+\uploads
+
